<?xml version="1.0"?>
<package format="2">
  <name>turtlebot3_object_tracker</name>
  <version>0.0.0</version>
  <description format="markdown">
    This package provides an object tracking functionality for TurtleBot3.
  </description>

  <maintainer email="amir.intelli@gmail.com">amirint</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>ament_cmake</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <exec_depend>ament_cmake</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <ament_cmake>
      <build_type>ament_python</build_type>
      <install_space>${AMENT_PREFIX_PATH}</install_space>
    </ament_cmake>
  </export>
</package>
